--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,36 @@
 .App{
+  background: #AFD4C0;
   display: flex;
   justify-content: center;
+  flex-direction: column; 
+}
+.Container{
+  background: linear-gradient(to bottom, #e2f3ea, #ffffff);  
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 600px;
+}
+.DashboardContainer{
+  display: flex;
+  justify-content: center;
+  /* flex-direction: column;  */
+} 
+.Container{
+  display: flex;
+  /* justify-content: space-around; */
+  /* flex-direction: row; */
+  /* display: flex;
+  justify-content: center;
+  flex-direction: column;  */
+} 
+
+.NewPropButton{
+  height: 60px;
+  width: 200px;
+  border: none;
+  background-color: #8AEA92;
 }
 /* .App {
   text-align: center;
