--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,30 @@
   flex-direction: column;
   align-items: center;
 }
+
+.WizHeader{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.Wiz{
+  display: flex;
+  flex-direction: column;
+  /* background-color: #fff; */
+  background: linear-gradient(to bottom, #e2f3ea, #ffffff);  
+  width: 600px;
+  height: 100vh;
+}
+
+.Markers{
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+
+/* /////////////////////////////// */
 /* .App {
   text-align: center;
 }
