--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,20 @@
   justify-content: space-around;
   padding: 10px;
 }
+.Inputs{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.WizButtons{
+  display: flex;
+  /* justify-content: space-around; */
+  /* align-content: space-around; */
+  padding: 10px;
+  color: red;
+  /* flex-direction: column; */
+}
 
 
 /* /////////////////////////////// */
