--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,8 @@
 .Header{
-    height: 100px;
+    height: 80px;
     width: 100vw;
     background-color: #519872;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
